// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom/Style Default 1`] = `
<storybook-wrapper
  changeDetectorRef={[Function ViewRef_]}
  onClick={[Function Function]}
  storyProps$={[Function Observable]}
  storyPropsSubscription={[Function Subscriber]}
  text={[Function String]}
>
  <storybook-button-component
    _ngcontent-a-c10=""
    _nghost-a-c11=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c11=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Custom/Style With Knobs 1`] = `
<storybook-wrapper
  changeDetectorRef={[Function ViewRef_]}
  onClick={[Function Function]}
  storyProps$={[Function Observable]}
  storyPropsSubscription={[Function Subscriber]}
  text={[Function String]}
>
  <storybook-button-component
    _ngcontent-a-c12=""
    _nghost-a-c13=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c13=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
